add header&footer style on index.html

--- a/yzg/index.html
+++ b/yzg/index.html
@@ -41,42 +41,42 @@
 
         <ul class="showcase">
           <li>
-            <a href="landing.html#qing-chun-you-yue">
+            <a href="landing.html#4ddong-tai-feng-xiong">
               <img width="100%" src="img/showcase-01.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#ming-xing-xiao-lian">
+            <a href="landing.html#jia-ti-long-bi">
               <img width="100%" src="img/showcase-02.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#gao-ting-bi-zi">
+            <a href="landing.html#han-shi-rong-zhi">
               <img width="100%" src="img/showcase-03.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#mi-ren-dian-yan">
+            <a href="landing.html#han-shi-shuangyan-pi">
               <img width="100%" src="img/showcase-04.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#jian-ting-mei-ru">
+            <a href="landing.html#prp-re-ma-ji">
               <img width="100%" src="img/showcase-05.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#xing-gan-mei-tui">
+            <a href="landing.html#bo-niao-suan">
               <img width="100%" src="img/showcase-06.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#xing-fu-mei-bai">
+            <a href="landing.html#jiao-yuan-dan-bai">
               <img width="100%" src="img/showcase-07.png">
             </a>
           </li>
           <li>
-            <a href="landing.html#wan-zheng-nv-ren">
+            <a href="landing.html#hgh-sheng-zhang-su">
               <img width="100%" src="img/showcase-08.png">
             </a>
           </li>
@@ -86,7 +86,7 @@
   </div>
   <div id="footer">
     <ul class="links">
-      <li><a href="guestbook.html"><span class="icon-footer-zxly">咨询留言</span></a></li>
+      <li><a href="#"><span class="icon-footer-zxly">咨询留言</span></a></li>
       <li><a href="treatments.html"><span class="icon-footer-zxxm">整形项目</span></a></li>
       <li class="active"><a href="index.html"><span class="icon-footer-index">首页</span></a></li>
       <li><a href="doctors.html"><span class="icon-footer-zjtd">专家团队</span></a></li>
